--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Python\\Python36\\python.exe",
+    "python.pythonPath": "C:\\Anaconda3\\python.exe",
     "python.linting.pylintEnabled": true
 }
